--- a/SIPServer-Installer/Product.wxs
+++ b/SIPServer-Installer/Product.wxs
@@ -7,12 +7,13 @@
 	<!-- Copyright GERRAudio Distribution 2024, all rights reserved
 		 Installs SIPServer in the C:\inetpub\SIPServer folder, creates if necessary.
 		 SIPServer.exe is created as an auto service but is not started 
-		 since conf and mod may not be present.
-		 These have to be copied in manually before the service is activated to configure the system.
-		 A start menu shortcut for SIPServer is created if manual startup is desired for testing.
+		 since conf and cert directories may not be completely configured yet
+		 Start menu shortcuts for SIPServer and the remote console are created if manual startup is desired for testing.
+
+		 the gstreamer dependency is installed in the ../Media directory if not present
 		 
 		 A date-stamped backup is made of any existing installation 
-		 including mod and conf if present
+		 including all subdirectories, whether manually copied or not (full copy)
 		 
 		 The IconsEtcPath contains the GERRAudio graphics and the
 		 liability limitation statements.
@@ -22,11 +23,10 @@
 		 The cert directory is not installed for security
 		 - TODO auto version increments
 		 - TODO stop gstreamer (in case)
-		 - TODO fix service issues
 
 	-->
-	
-	
+
+
 	<?define ReleaseBuildDirectoryPath = "..\..\SIPServer\x64\Release\" ?>
 	<?define GSTMediaDirectoryPath = "..\..\SIPServer\x64\Media\" ?>
 	<?define IconsEtcPath= ".\InstallUtils\" ?>
@@ -49,9 +49,10 @@
 		<Property Id="ROOTDRIVE" Value="C:\"/>
 		<Feature Id="SIPSERVER" Title="IP Telephony Server" Level="1">
 			<ComponentGroupRef Id="HarvestedComponents"/>
+			<ComponentGroupRef Id="GSTHarvestedComponents"/>
 		</Feature>
-	
-		
+
+
 		<Feature Id="ProductFeature" Title="Main Product" Level="1">
 			<ComponentRef Id="ApplicationShortcut" />
 			<ComponentRef Id="ApplicationShortcutDesktop" />
@@ -60,8 +61,8 @@
 
 		<!-- VC redistributable install -->
 		<DirectoryRef Id="TARGETDIR">
-			<Merge Id="VCRedist" 
-				   SourceFile="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\VC\Redist\MSVC\14.16.27012\MergeModules\Microsoft_VC141_CRT_x64.msm" 
+			<Merge Id="VCRedist"
+				   SourceFile="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\VC\Redist\MSVC\14.16.27012\MergeModules\Microsoft_VC141_CRT_x64.msm"
 				   DiskId="1" Language="0"/>
 		</DirectoryRef>
 		<Feature Id="VCRedist" Title="Visual C++ x64 Runtime" AllowAdvertise="no" Display="hidden" Level="1">
@@ -74,21 +75,21 @@
 		<Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Display important setup information" />
 		<!--Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOX" Value="1" /-->
 		<UI>
-		<ui:WixUI Id="WixUI_Minimal"/>
-		<Publish Dialog="ExitDialog"
-			Control="Finish"
-			Event="DoAction"
-			Value="LaunchReadme"
-			Condition='WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1  and NOT Installed'/>
+			<ui:WixUI Id="WixUI_Minimal"/>
+			<Publish Dialog="ExitDialog"
+				Control="Finish"
+				Event="DoAction"
+				Value="LaunchReadme"
+				Condition='WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1  and NOT Installed'/>
 		</UI>
-		
+
 		<Binary Id="readme.txt" SourceFile="$(IconsEtcPath)readme.txt" />
 		<Property Id="WixShellExecBinaryId" Value="readme.txt" />
 		<CustomAction Id="LaunchReadme" BinaryRef="Wix4UtilCA_$(sys.BUILDARCHSHORT)"
-					  DllEntry="WixShellExecBinary" Execute="immediate" Return="ignore" 
+					  DllEntry="WixShellExecBinary" Execute="immediate" Return="ignore"
 					  />
 
-		
+
 		<UIRef Id="WixUI_ErrorProgressText" />
 		<SetProperty
 				Id="WIXUI_EXITDIALOGOPTIONALTEXT"
@@ -98,10 +99,10 @@
           />
 
 
-		
+
 		<Property Id="TCPADR" Value="10.8.91.10"/>
 		<Property Id="UDPADR" Value="10.8.90.10"/>
-				  
+
 		<UI Id="CustomUI_IP">
 			<Dialog Id="IPDlg" Title="!(loc.InstallDirDlg_Title)" Width="370" Height="270" NoMinimize="no">
 
@@ -132,13 +133,13 @@
 				<Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="0" />
 			</Dialog>
 
-			 
-		<InstallUISequence>
-			<Show After="ProgressDlg" Dialog="IPDlg" Condition="NOT Installed" />
-		</InstallUISequence> 
 
-		</UI>		 
-		
+			<InstallUISequence>
+				<Show After="ProgressDlg" Dialog="IPDlg" Condition="NOT Installed" />
+			</InstallUISequence>
+
+		</UI>
+
 		<WixVariable
 			 Id="WixUILicenseRtf"
 			Value="$(IconsEtcPath)\GerrAudiobpl.rtf"
@@ -151,7 +152,7 @@
 		  Id="WixUIBannerBmp"
 		  Value="$(IconsEtcPath)\GerrAudioBanner.png"
 		/>
-		
+
 
 
 		<InstallUISequence>
@@ -164,24 +165,24 @@
 
 		<InstallExecuteSequence>
 			<Custom Action="StopApp"		After="InstallInitialize"  />
-			<Custom Action="UninstallApp"	After="StopApp"  />
-			<Custom Action="StopSvc"		After="UninstallApp"  />
+			<Custom Action="StopSvc"		After="StopApp"  />
 			<Custom Action="DeleteSvc"		After="StopSvc"  />
 			<Custom Action="Backup"			After="DeleteSvc"	/>
 			<Custom Action="Rename"			After="Backup"/>
-			<Custom Action="SetIP"			 Before="InstallService"/>
+			<Custom Action="SetIP"			Before="InstallService"/>
 			<Custom Action="InstallService" Before="InstallFinalize"   />
-			<Custom Action="RestartSvcSetup" After="InstallService"/>
+			<Custom Action="ConfigSvcSetup" After="InstallService"/>
 			<Custom Action="LaunchReadme"	After ="InstallFinalize" Condition='WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1  and NOT Installed'/>
 		</InstallExecuteSequence>
-		
+
 	</Package>
-	
+
 	<Fragment>
 		<Directory  Name="." ComponentGuidGenerationSeed="5950CB39-0D52-4158-A4B1-4BC5AAE9A2C4">
 			<Directory Id="INETPUB" Name="inetpub">
 				<Directory Id ="WWWROOT" Name="wwwroot"/>
 				<Directory Id="SIPServerDir" Name="SIPServer"/>
+				<Directory Id="MediaDir" Name="Media"/>
 				<Directory Id="ProgramMenuFolder">
 					<Directory Id="MYAPPFOLDER" Name="GerrAudio"/>
 				</Directory>
@@ -194,7 +195,7 @@
 		<Icon Id="GerrIcon.ico" SourceFile="$(IconsEtcPath)\GerrAudio.ico"/>
 		<Icon Id="GerrIconW.ico" SourceFile="$(IconsEtcPath)\GerrAudioW.ico"/>
 
-	<DirectoryRef Id="DesktopFolder">
+		<DirectoryRef Id="DesktopFolder">
 			<!--Desktop shortcut-->
 			<Component Id="ApplicationShortcutDesktop" Guid="335335B2-F691-408E-A857-56C3D30DA636">
 				<Shortcut Id="EXEApplicationDesktopShortcut"
@@ -202,18 +203,38 @@
 						Description="SIPServer Start"
 						Target="[SIPServerDir]SIPServer.exe"
 						WorkingDirectory="SIPServerDir"
-						Icon="GerrIconW.ico"/>
+						Icon="GerrIcon.ico"/>
 
 				<Shortcut Id="CLIApplicationDesktopShortcut"
 						Name="fs_cli"
 						Description="SIPServer Command Line Interface (CLI)"
-						Target="[SIPServerDir]fs_cli.exe"
+						Target="[SIPServerDir]EngineCommandLine.exe"
+						WorkingDirectory="SIPServerDir"
+						Icon="GerrIconW.ico"/>
+
+				<Shortcut Id="ServiceStartDesktopShortcut"
+						Name="Start SIPServer Service"
+						Description="SIPServer Service Start"
+						Target='"[SIPServerDir]nssm.exe" start SIPServer"'
+						WorkingDirectory="SIPServerDir"
+						Icon="GerrIconW.ico"/>
+
+				<Shortcut Id="ServiceStopDesktopShortcut"
+						Name="Stop SIPServer Service"
+						Description="SIPServer Service Stop"
+						Target='"[SIPServerDir]nssm.exe" stop SIPServer'
 						WorkingDirectory="SIPServerDir"
 						Icon="GerrIcon.ico"/>
-				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPServerIDT" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPServerDT" Name="installed" Type="string" Value="SIPServer"  />
+
+
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPServerIDT" Name="installed1" Type="integer" Value="1" KeyPath="yes"/>
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPServerDT" Name="installed1" Type="string" Value="SIPServer"  />
 				<RegistryValue Root="HKCU" Key="Software\GerrAudio\fs_cliIDT" Name="installed2" Type="integer" Value="1" />
-				<RegistryValue Root="HKCU" Key="Software\GerrAudio\fs_cliDT" Name="installed2" Type="string" Value="fs_cli"  />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\fs_cliDT" Name="installed2" Type="string" Value="SIPServer-CLI"  />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStartIDT" Name="installed3" Type="integer" Value="1" />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStartDT" Name="installed3" Type="string" Value="ServerSvcStart"  />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStopIDT" Name="installed4" Type="integer" Value="1" />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStopDT" Name="installed4" Type="string" Value="ServerSvcStop"  />
 
 			</Component>
 		</DirectoryRef>
@@ -223,28 +244,46 @@
 			<Component Id="ApplicationShortcut" Guid="F5E4852D-0A23-4BBF-8E43-99B9D9C80837">
 				<Shortcut Id="ApplicationStartMenuShortcut"
 								  Name="SIPServer"
-								  Description="SIPServer Start"
+								  Description="SIPServer Console"
 								  Target="[SIPServerDir]SIPServer.exe"
 								  WorkingDirectory="SIPServerDir"
-								  Icon="GerrIconW.ico"/>
+								  Icon="GerrIcon.ico"/>
+
 				<Shortcut Id="CLIApplicationStartMenuShortcut"
-								  Name="fs_cli"
-								  Description="Command Line Interface (CLI) to access thhe service"
-								  Target="[SIPServerDir]fs_cli.exe"
+								  Name="Command Line Interface (CLI)"
+								  Description="Command Line Interface (CLI) to access the service"
+								  Target="[SIPServerDir]EngineCommandLine.exe"
+								  WorkingDirectory="SIPServerDir"
+								  Icon="GerrIconW.ico"/>
+
+				<Shortcut Id="ServiceStartMenuShortcut"
+								  Name="Start SIP Service"
+								  Description="Start the SIPServer service"
+								  Target='"[SIPServerDir]nssm.exe" start SIPServer'
+								  WorkingDirectory="SIPServerDir"
+								  Icon="GerrIconW.ico"/>
+
+				<Shortcut Id="ServiceStopMenuShortcut"
+								  Name="Stop SIP Service"
+								  Description="Stop the SIPServer service"
+								  Target='"[SIPServerDir]nssm.exe" stop SIPServer'
 								  WorkingDirectory="SIPServerDir"
 								  Icon="GerrIcon.ico"/>
 
 				<RemoveFolder Id="UninstallShortcut" Directory="MYAPPFOLDER" On="uninstall"/>
-				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPServerI" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPServer" Name="installed" Type="string" Value="SIPServer"  />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPServerI" Name="installed1" Type="integer" Value="1" KeyPath="yes"/>
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPServer" Name="installed1" Type="string" Value="SIPServer"  />
 				<RegistryValue Root="HKCU" Key="Software\GerrAudio\fs_cliI" Name="installed2" Type="integer" Value="1" />
-				<RegistryValue Root="HKCU" Key="Software\GerrAudio\fs_cli" Name="installed2" Type="string" Value="fs_cli"  />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\fs_cli" Name="installed2" Type="string" Value="SIPServer-CLI"  />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStartI" Name="installed3" Type="integer" Value="1" />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStart" Name="installed3" Type="string" Value="ServerSvcStart"  />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStopI" Name="installed4" Type="integer" Value="1" />
+				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStop" Name="installed4" Type="string" Value="ServerSvcStop"  />
 
 				<!--Environment variables to set or modify-->
 				<!-- sys env var(s) -->
 				<!-- usr env var(s) -->
 				<!-- keep for reference, no longer required, handled by aes67 module...
-
 				
 				<Environment Id ="GSTR0SYS"
 						Name="GSTREAMER_1_0_ROOT_MSVC_X86_64"
@@ -304,7 +343,7 @@
 						System ="no"
 						Value ="%GSTREAMER_1_0_ROOT_MSVC_X86_64%bin\"/>
 			-->
-						
+
 			</Component>
 		</DirectoryRef>
 
@@ -314,22 +353,29 @@
 
 		<ComponentGroup  Id="HarvestedComponents" Directory="SIPServerDir">
 			<!--Special batch file utility-->
-			<Component Id="RenBackupFile" Guid="">		<!-- No Guid forces the batch to persist between installs-->
+			<Component Id="RenBackupFile" Guid="">
+				<!-- No Guid forces the batch to persist between installs-->
 				<File Id="RenBackupScript"
 					  Source="$(IconsEtcPath)\RenBackup.bat" KeyPath="yes"
 				/>
 			</Component>
-			<Component Id="SetIP" Guid="">		<!-- No Guid forces the batch to persist between installs-->
+			<Component Id="SetIP" Guid="">
+				<!-- No Guid forces the batch to persist between installs-->
 				<File Id="SetIPScript"
 					  Source="$(IconsEtcPath)\SetIP.bat" KeyPath="yes"
 				/>
 			</Component>
-			<Component Id="grep" Guid="">		<!-- No Guid forces the batch to persist between installs-->
+			<Component Id="grep" Guid="">
 				<File Id="grep"
 					  Source="$(IconsEtcPath)\grep.exe" KeyPath="yes"
 				/>
 			</Component>
-			<Component Id="readme.txt" Guid=""> <!-- No Guid forces the file to persist between installs-->
+			<Component Id="svcinstaller" Guid="">
+				<File Id="nssm"
+					  Source="$(IconsEtcPath)\nssm.exe" KeyPath="yes"
+				/>
+			</Component>
+			<Component Id="readme.txt" Guid="">
 				<File Id="readme.txt"
 					  Source="$(IconsEtcPath)\readme.txt" KeyPath="yes"
 				/>
@@ -345,8 +391,9 @@
 				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\RenBackup.bat"/>
 				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\SetIP.bat"/>
 				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\grep.exe"/>
+				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\nssm.exe"/>
 				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\readme.txt"/>
-				
+
 				<!--Files we do not want to copy over - see .gitignore -->
 				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\.git*"/>
 				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\.git"/>
@@ -365,7 +412,10 @@
 				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\*.cab"/>
 				<Exclude Files ="$(ReleaseBuildDirectoryPath)\**\*.msi"/>
 			</Files>
-			
+		</ComponentGroup>
+
+		<ComponentGroup  Id="GSTHarvestedComponents" Directory="MediaDir">
+
 			<Files   Include="$(GSTMediaDirectoryPath)\**">
 				<!--TODO - check if we can exclude dev files-->
 				<Exclude Files ="$(GSTMediaDirectoryPath)\**\.git*"/>
@@ -391,24 +441,16 @@
 			</Files>
 		</ComponentGroup>
 
-	</Fragment>
 
-	<Fragment>
-
-		
 		<!-- stop service (try both ways) and backup prev version -->
 
 
 		<CustomAction Id="StopApp"
-			ExeCommand='cmd.exe /c  echo Stopping service... please do not close window &amp;&amp; c:\inetpub\SIPserver\SIPServer.exe -stop 2>NUL >NUL '
+			ExeCommand='cmd.exe /c  echo Stopping SIPServer... please do not close window &amp;&amp; c:\inetpub\SIPserver\SIPServer.exe -stop 2>NUL >NUL '
 			Directory="MYAPPFOLDER"  Execute="deferred"
 					  Return="ignore"
 			/>
-		<CustomAction Id="UninstallApp"
-			ExeCommand='cmd.exe /c echo Uninstalling service... please do not close window &amp;&amp; c:\inetpub\SIPserver\SIPServer.exe -uninstall 2>NUL >NUL'
-			Directory="MYAPPFOLDER" Execute="deferred"
-					  Return="ignore"
-			/>
+
 		<CustomAction Id="StopSvc"
 			ExeCommand='cmd.exe /c echo Stopping service... please do not close window &amp;&amp; sc stop SIPServer 2>NUL >NUL'
 			Directory="MYAPPFOLDER"  Execute="deferred"
@@ -422,7 +464,7 @@
 			/>
 
 		<CustomAction Id="Backup"
-			ExeCommand='cmd.exe /c echo "Backing up... please do not close window. This may take some time depending on the size of the log files." &amp;&amp; XCOPY C:\inetpub\SIPServer C:\inetpub\SIPServerTemp /Y/C/H/E/J/K/O/Q/I >NUL 2>NUL'
+			ExeCommand='cmd.exe /c echo Backing up... please do not close window. This may take some time depending on the size of the log files. &amp;&amp; XCOPY C:\inetpub\SIPServer C:\inetpub\SIPServerTemp /Y/C/H/E/J/K/O/Q/I >NUL 2>NUL'
 			Directory="MYAPPFOLDER" Execute="firstSequence"
 					  Return="ignore"
 		/>
@@ -440,14 +482,14 @@
 		/>
 
 		<CustomAction Id="InstallService"
-			ExeCommand="$(DestinationFolder)\SIPServer.exe -install SIPServer"
+			ExeCommand='$(DestinationFolder)\nssm install SIPServer "C:\inetpub\SIPServer\SIPServer.exe"'
 			Directory="MYAPPFOLDER" Execute="deferred"
 			Impersonate="yes"
 				  Return="ignore"
 					  
 		/>
-		<CustomAction Id="RestartSvcSetup"
-			ExeCommand='cmd.exe /c echo Stopping service... please do not close window &amp;&amp; sc failure SIPServer reset=259100 actions=restart/10000 2>NUL >NUL'
+		<CustomAction Id="ConfigSvcSetup"
+			ExeCommand='cmd.exe /c echo Configuring service... please do not close window &amp;&amp; sc failure SIPServer reset=259100 actions=restart/10000 2>NUL >NUL'
 			Directory="MYAPPFOLDER"  Execute="deferred"
 			  Return="ignore"
 		/>
