--- a/SIPServer-Installer/Product.wxs
+++ b/SIPServer-Installer/Product.wxs
@@ -4,7 +4,7 @@
 	 xmlns:netfx="http://wixtoolset.org/schemas/v4/wxs/netfx"
 	 xmlns:util="http://wixtoolset.org/schemas/v4/wxs/util"
 	 >
-	<!-- Copyright GERRAudio Distribution 2024, all rights reserved
+	<!-- GERRAudio Distribution 2024
 		 Installs SIPServer in the C:\inetpub\SIPServer folder, creates if necessary.
 		 SIPServer.exe is created as an auto service but is not started 
 		 since conf and cert directories may not be completely configured yet
@@ -25,9 +25,7 @@
 		 - TODO stop gstreamer (in case)
 		 - TODO get rid of wssm one day
 	-->
-
- 
-	
+ 	
 	<?define ReleaseBuildDirectoryPath = "..\..\SIPServer\x64\Release\" ?>
 	<?define GSTMediaDirectoryPath = "..\..\SIPServer\x64\Media\" ?>
 	<?define IconsEtcPath= ".\InstallUtils\" ?>
@@ -74,7 +72,7 @@
 		<!-- UI stuff -->
 		<UIRef Id="CustomUI_IP" />
 		<Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Display important setup information" />
-		<!--Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOX" Value="1" /-->
+
 		<UI>
 			<ui:WixUI Id="WixUI_Minimal"/>
 			<Publish Dialog="ExitDialog"
@@ -100,7 +98,7 @@
           />
 
 
-
+		<!-- These should be left as-is, the installer can change them if required, but will search for these values to replace-->
 		<Property Id="TCPADR" Value="10.8.91.10"/>
 		<Property Id="UDPADR" Value="10.8.90.10"/>
 
@@ -245,10 +243,11 @@
 		</DirectoryRef>
 
 		<!--Start menu shortcuts-->
+		<!-- order of shortcuts in start menu is alphabetical by name-->
 		<DirectoryRef Id="MYAPPFOLDER">
 			<Component Id="ApplicationShortcut" Guid="F5E4852D-0A23-4BBF-8E43-99B9D9C80837">
 				<Shortcut Id="ServiceStartMenuShortcut"
-								  Name="Start SIP Service"
+								  Name="1 - Start SIP Service"
 								  Description="Start the SIPServer service"
 								  Target='[SIPServerDir]nssm.exe'
 								  Arguments ='start SIPServer'
@@ -256,7 +255,7 @@
 								  Icon="GerrIconW.ico"/>
 
 				<Shortcut Id="ServiceStopMenuShortcut"
-								  Name="Stop SIP Service"
+								  Name="2 - Stop SIP Service"
 								  Description="Stop the SIPServer service"
 								  Target='[SIPServerDir]nssm.exe'
 								  Arguments ='stop SIPServer'
@@ -264,14 +263,14 @@
 								  Icon="GerrIcon.ico"/>
 
 				<Shortcut Id="CLIApplicationStartMenuShortcut"
-					Name="Command Line Interface (CLI)"
+					Name="3 - Command Line Interface (CLI)"
 					Description="Command Line Interface (CLI) to access the service"
 					Target="[SIPServerDir]EngineCommandLine.exe"
 					WorkingDirectory="SIPServerDir"
 					Icon="GerrIconW.ico"/>
 
 				<Shortcut Id="ApplicationStartMenuShortcut"
-					Name="SIPServer Console"
+					Name="4 - SIPServer Console"
 					Description="SIPServer Console"
 					Target="[SIPServerDir]SIPServer.exe"
 					WorkingDirectory="SIPServerDir"
@@ -279,7 +278,7 @@
 
 
 				<RemoveFolder Id="UninstallShortcut" Directory="MYAPPFOLDER" On="uninstall"/>
-				<!-- order of shortcuts is determined here-->
+
 				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStartI" Name="installed3" Type="integer" Value="1" />
 				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStart" Name="installed3" Type="string" Value="ServerSvcStart"  />
 				<RegistryValue Root="HKCU" Key="Software\GerrAudio\SIPSvcStopI" Name="installed4" Type="integer" Value="1" />
